Creación de clases del modelo e inicialización de base de datos PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=gestor_alojamientos
+
+# ----- Conexión PostgreSQL -----
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestor_alojamientos
+spring.datasource.username=gestor_alojamientos
+spring.datasource.password=TfgNayara2025
+
+# ----- Configuración de JPA / Hibernate -----
+#Descomentar para modificar base de datos, y comentar cuando se termina:
+# spring.jpa.hibernate.ddl-auto=update 
+# Mostrar SQL (opcional)
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
