Login, logout y gestión de usuarios.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=gestor_alojamientos
+info.app.name=Gestor de Alojamientos
+info.app.version=1.0.0
 
 # ----- Conexión PostgreSQL -----
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestor_alojamientos
