--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,7 @@ info.app.name=Gestor de Alojamientos
 info.app.version=1.0.0
 
 # ----- Conexión PostgreSQL -----
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestor_alojamientos
-spring.datasource.username=gestor_alojamientos
-spring.datasource.password=TfgNayara2025
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ----- Configuración de JPA / Hibernate -----
 #Descomentar para modificar base de datos, y comentar cuando se termina:
@@ -13,3 +11,11 @@ spring.datasource.password=TfgNayara2025
 # Mostrar SQL (opcional)
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
+
+# ----- Configuración de AWS S3 -----
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
+aws.region=${AWS_REGION}
+aws.s3.bucket=${AWS_BUCKET}
+#2MB máximo por archivo:
+aws.s3.max-file-size=2097152   
