Refactorización func Usuarios, modificaciones func Alojamientos y avances en func Reservas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ----- Configuración de JPA / Hibernate -----
 #Descomentar para modificar base de datos, y comentar cuando se termina:
-# spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update 
 # Mostrar SQL (opcional)
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
