Funcionalidad de envío de emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,14 @@ aws.region=${AWS_REGION}
 aws.s3.bucket=${AWS_BUCKET}
 #2MB máximo por archivo:
 aws.s3.max-file-size=2097152   
+
+# Configuración Gmail SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tfggestionalojamientos@gmail.com
+spring.mail.password=kiqgbtxsfurlsoik
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
