--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ aws.s3.max-file-size=2097152
 # Configuración Gmail SMTP
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tfggestionalojamientos@gmail.com
-spring.mail.password=kiqgbtxsfurlsoik
+spring.mail.username=${EMAIL_USER}
+spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
